[package]
name = "wc_html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.25"
httparse = "1.8"
json = "0.12"
markup5ever = "0.10"
markup5ever_rcdom = "0.1"
regex = "1"
tendril = "0.4"
url = "2.3"
